--- a/_includes/home/header.html
+++ b/_includes/home/header.html
@@ -4,8 +4,8 @@
     <div class="container">
         <div class="row align-items-center justify-content-between">
             <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-right">
-                <h1 class="text-white mb-4">Trusted IT Support Experts</h1>
-                <p class="text-xlarge text-white mb-5">Supporting your IT needs and goals is what drives our business and what provides yours with the best of breed of technology.</p>
+                <h1 class="text-white mb-4">Trusted Cybersecurity Experts – Preparing you for what’s next</h1>
+                <p class="text-xlarge text-white mb-5">Supporting your IT needs and goals is what drives our business and what provides yours with the best breed of technology. Cybersecurity, infrastructure management and application development all in one place.</p>
                 <div class="d-flex">
                     <a href="{{ '/services' | relative_url }}">
                         <button class="btn btn-outline-white btn-wide mr-2 mr-sm-4">Our Services</button>
