--- a/_includes/contact/contact-form.html
+++ b/_includes/contact/contact-form.html
@@ -1,4 +1,4 @@
-<section class="contact-form">
+<section class="section-padding bg-shapes-contact">
     <div class="container">
         <div class="row">
             <div class="col-md-6 mb-5 mb-md-0">
