Update homepage header image

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,12 +1,6 @@
 .header-home {
     min-height: 100vh;
-    background-image: url("../images/header/header_home.svg");
-    background-size: cover;
-    overflow-x: hidden;
-
-    .header-image {
-        height: 70vh;
-    }
+    background-color: transparent;
 }
 
 .header-page {
