--- a/_includes/contact/contact-form.html
+++ b/_includes/contact/contact-form.html
@@ -8,7 +8,7 @@
                             <input type="text" class="form-control" name="firstName" placeholder="First Name*" required>
                         </div>
                         <div class="form-group col-md-6">
-                            <input type="text" class="form-control" name="secondName" placeholder="Second Name*" required>
+                            <input type="text" class="form-control" name="secondName" placeholder="Last Name*" required>
                         </div>
                     </div>
                     <div class="form-group">
