--- a/_includes/home/header.html
+++ b/_includes/home/header.html
@@ -1,9 +1,10 @@
-<header class="header-home jumbotron jumbotron-fluid">
+<header class="header-home jumbotron jumbotron-fluid" data-parallax="scroll"
+    data-image-src="{{ 'assets/images/header/header_home.jpg' | relative_url }}">
     {% include common/navigation.html %}
 
     <div class="container">
         <div class="row align-items-center justify-content-between">
-            <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-right">
+            <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-up">
                 <h1 class="text-white mb-4">Trusted Cybersecurity Experts</h1>
                 <p class="text-white lead font-italic">Preparing you for what’s next</p>
                 <p class="text-xlarge text-white mb-5">Supporting your IT needs and goals is what drives our business and what provides yours with the best breed of technology. Cybersecurity, infrastructure management and application development all in one place.</p>
@@ -15,9 +16,6 @@
                         <button class="btn btn-outline-white btn-wide">Contact Us</button>
                     </a>
                 </div>
-            </div>
-            <div class="col-md-5" data-aos="flip-right">
-                <img class="header-image" src="{{ 'assets/images/header/header_browser.svg' | relative_url }}" alt="Open browser tab">
             </div>
         </div>
     </div>
