Edit home header image

--- a/_includes/common/header-page.html
+++ b/_includes/common/header-page.html
@@ -1,6 +1,6 @@
 <header class="header-page jumbotron jumbotron-fluid overflow-hidden {{ include.class }}" data-parallax="scroll"
     data-image-src="{{ 'assets/images/header/' | relative_url | append: page.header_image }}">
-    {% include common/navigation.html class='section-margin' %}
+    {% include common/navigation.html %}
 
     <div class="container">
         <div class="row justify-content-center">
