Fix navbar margin on mobile

--- a/_includes/common/navigation.html
+++ b/_includes/common/navigation.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark section-margin">
+<nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
         <a class="navbar-brand" href="{{ '/' | relative_url }}">
             <img src="{{ 'assets/images/logos/vnk-logo-white.png' | relative_url }}" alt="VNK Consulting" loading="lazy">
